fixed report Fixed robot escape from fence MapBuilder by area expression Compute kpis optimized data reader/writer and removed polar map batches loop changed log level fixed grid topology snap new TrajctoryDatasetIterator